<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/Layout">


    <EditText
        android:id="@+id/editweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="weight"
        android:ems="10"
        android:hint="@string/enter_weight"
        android:inputType="number"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toTopOf="@+id/editheight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,TextFields,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editheight"
        android:layout_width="201dp"
        android:layout_height="51dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_height_ft"
        android:inputType="number"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toTopOf="@+id/editheight1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,MissingConstraints,TextFields" />

    <EditText
        android:id="@+id/editheight1"
        android:layout_width="207dp"
        android:layout_height="55dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_height_cms"
        android:inputType="number"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,TouchTargetSizeCheck,TextSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="268dp"
        android:layout_height="71dp"
        android:layout_marginBottom="12dp"
        android:text="@string/submit"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/result"
        android:layout_width="217dp"
        android:layout_height="63dp"
        android:layout_marginBottom="184dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="261dp"
        android:layout_height="148dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editweight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/body_mass_index"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>
